--- a/matisser/src/main/res/values-zh/strings.xml
+++ b/matisser/src/main/res/values-zh/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
   Copyright 2017 Zhihu Inc.
 
@@ -16,6 +15,7 @@
   limitations under the License.
   -->
 <resources>
-    <string name="permission_request_denied">Permission request denied</string>
-    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
+    <string name="permission_request_denied">需要相应的权限</string>
+    <string name="error_gif">长宽不小于 %1$dpx，且大小不超过 %2$sM。</string>
+    <string name="error_original">大小不超过 %1$sM。</string>
 </resources>
